--- a/toDoApp.css
+++ b/toDoApp.css
@@ -77,8 +77,8 @@ tr{
 }
 
 
-tr:nth-of-type(2n){
-	background-color: rgb(242, 242, 242);
+tr:nth-child(2n){
+	background-color: rgb(245, 242, 242);
 }
 
 td{
